# mycelium

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  PROMISE.md  README.md  flake.nix  justfile  latest.json
.cargo/: AUDIT_IGNORES.md  audit.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  rfc.md
.github/workflows/: ci.yml  release.yml  security.yml
apps/cli/: gleam.toml
apps/cli/src/: mycelium_cli.gleam
apps/cli/test/: mycelium_cli_test.gleam
apps/core/: gleam.toml  start.ps1  start.sh
apps/core/src/: binary_to_float_compat.erl  binary_to_integer_safe.erl  mycelium.gleam  mycelium_ffi.erl
apps/core/src/mycelium/: config_server.gleam  crypto_server.gleam  i18n.gleam  identity_server.gleam  registry.gleam  sup.gleam
apps/core/src/mycelium/crdt/: loro_port.gleam
apps/core/src/mycelium/document/: block.gleam  document.gleam  document_registry.gleam
apps/core/src/mycelium/http/: editor_ws.gleam  http_supervisor.gleam  lustre_session.gleam  router.gleam
apps/core/src/mycelium/network/: backpressure.gleam  iroh_port.gleam  pairing.gleam  peer_registry.gleam  sync_orchestrator.gleam
apps/core/src/mycelium/plugin/: plugin_registry.gleam  wasmedge_port.gleam
apps/core/src/mycelium/search/: fastembed_port.gleam  indexer.gleam
apps/core/src/mycelium/storage/: at_rest.gleam  attachment_store.gleam  storage_supervisor.gleam  surreal_port.gleam
apps/core/src/mycelium/sync/: compaction.gleam  sync_engine.gleam
apps/core/src/mycelium/util/: noop.gleam  port_actor.gleam  port_locator.gleam  ulid.gleam
apps/core/src/mycelium/views/: app_view.gleam  block.gleam  editor.gleam  sidebar.gleam  types.gleam
apps/core/test/: mycelium_test.gleam  plugin_test.gleam  property_test.gleam  sidecar_test.gleam  sync_engine_test.gleam  wasmedge_test.gleam
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: README.md  icon.icns
apps/desktop/resources/frontend/: app.css  app.js  index.html  markdown.js
apps/desktop/src/: main.rs
apps/frontend/: gleam.toml
apps/frontend/src/: frontend.gleam
apps/frontend/test/: frontend_test.gleam
apps/relay/: Cargo.toml
apps/relay/src/: main.rs
docs/: INSTALLATION.md  LICENSES.md  MAINTAINERS.md  MYCELIUM.md  README.md  SECRETS.md  SETUP.md  SPECIFICATION.md  SUMMARY.md  book.toml  contributing.md  threat_model.md  ui-remake-plan.md
docs/architecture/: adr-0001-record-architecture-decisions.md  adr-0002-language-choice-gleam-on-beam.md  adr-0003-sidecars-not-nifs.md  adr-0004-loro-as-crdt-engine.md  adr-0005-iroh-for-p2p-transport.md  adr-0006-surrealdb-embedded-for-storage.md  adr-0007-lustre-server-components-for-ui.md  adr-0008-tauri-for-desktop-shell.md  adr-0009-age-and-blake3-for-cryptography.md  adr-0010-wasmedge-for-plugin-sandbox.md  adr-0011-nix-flakes-for-reproducibility.md  adr-0012-port-protocol-cbor-over-stdio.md  adr-0013-python-for-ci-helpers.md  adr-template.md  data_model.md  roadmap.md
docs/audit/: AUDIT_DOSSIER.md  inventory.md
docs/compliance/: BETA_LAUNCH_CHECKLIST.md  NFR_BASELINE.md  PLATFORM_READINESS.md  REQUIREMENTS_MATRIX.md  perf_baseline.json
docs/plugins/: contract.md  sdk.md
docs/plugins/index/: CONTRIBUTING-INDEX.md  README.md  index.json  schema.json
docs/protocols/: port.md  wire.md
examples/: README.md
examples/plugins/: word-count.json
examples/themes/: nord.json  solarized-dark.json
infra/: relay_systemd.service
infra/ci/: check.yml  perf_gate.py  release.yml  requirements_gate.py  soak.yml
infra/nix/: README.md  sidecar.nix
plugins/: manifest_schema.json
plugins/examples/ical_import/: Cargo.toml  README.md  manifest.json
plugins/examples/ical_import/src/: lib.rs
plugins/examples/mermaid/: README.md  manifest.json
plugins/examples/mermaid/src/: main.wat
plugins/examples/translate/: Cargo.toml  README.md  manifest.json
plugins/examples/translate/src/: lib.rs
plugins/sdk/: Cargo.toml  LICENSE
plugins/sdk/src/: lib.rs
proto/: plugin.wit  port.cddl  wire.cddl
scripts/: audit_inventory.ps1  cleanup-stale-branches.sh  verify_reproducibility.ps1
sidecars/crypto_port/: Cargo.toml
sidecars/crypto_port/src/: main.rs
sidecars/fastembed_port/: Cargo.toml
sidecars/fastembed_port/src/: main.rs
sidecars/iroh_port/: Cargo.toml
sidecars/iroh_port/src/: main.rs
sidecars/loro_port/: Cargo.toml
sidecars/loro_port/src/: main.rs
sidecars/port_codec/: Cargo.toml
sidecars/port_codec/src/: lib.rs
sidecars/surreal_port/: Cargo.toml
sidecars/surreal_port/benches/: bench_main.rs
sidecars/surreal_port/src/: main.rs
sidecars/wasmedge_port/: Cargo.toml
sidecars/wasmedge_port/src/: main.rs
tests/integration/: README.md
tests/load/: README.md  run.sh
tests/property/: README.md
tests/smoke/: m0_roundtrip.md  package.json  webdriver.spec.js
