[package]
name = "mycelium_desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mycelium desktop host (Tauri shell, BEAM supervisor)"

[[bin]]
name = "mycelium_desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["wry"] }
tauri-plugin-updater = "2.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "io-std", "io-util", "time", "sync", "net"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
dirs = "5"
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Pipes", "Win32_Security"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
