[package]
name = "mycelium_relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mycelium headless relay (store-and-forward buffer for ciphertext CRDT operations)"

[[bin]]
name = "mycelium-relay"
path = "src/main.rs"

[dependencies]
iroh = { version = "0.92", features = ["discovery-local-network"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "sync", "fs", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
hex = "0.4"
ed25519-dalek = "2.1"
rand = "0.8"
