[package]
name = "crypto_port"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mycelium cryptography sidecar (BLAKE3, age, Ed25519, X25519, OS keychain, SPAKE2)"

[[bin]]
name = "crypto_port"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
age = "0.11"
keyring = { version = "3.6", default-features = false, features = ["windows-native", "apple-native", "linux-native-sync-persistent"] }
spake2 = "0.4"
uuid = { version = "1.10", features = ["v4"] }
