[package]
name = "fastembed_port"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mycelium fastembed-rs embedding sidecar"

[[bin]]
name = "fastembed_port"
path = "src/main.rs"

[dependencies]
fastembed = { version = "4.9", default-features = false, features = ["ort-load-dynamic", "hf-hub-rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
