[package]
name = "loro_port"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mycelium Loro CRDT sidecar"

[[bin]]
name = "loro_port"
path = "src/main.rs"

[dependencies]
loro = "1.7"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
