[package]
name = "port_codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mycelium port-protocol codec (line-framed JSON or length-prefixed CBOR)"

[lib]
name = "port_codec"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
