[package]
name = "wasmedge_port"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mycelium WASM plugin sandbox sidecar (uses wasmtime as portable runtime)"

[[bin]]
name = "wasmedge_port"
path = "src/main.rs"

[dependencies]
wasmtime = { version = "36", default-features = false, features = ["cranelift", "runtime", "wat"] }
wasmtime-wasi = { version = "36", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
blake3 = "1.5"
