[package]
name = "translate_plugin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Mycelium reference plugin: text transformer"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]
